--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -50,3 +50,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_JSCPD: false
           VALIDATE_GITLEAKS: false
+          VALIDATE_JAVASCRIPT_STANDARD: false
