--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
+          cache-dependency-path: "website/package-lock.json"
 
       - name: Install dependencies
         run: npm ci
