chore: docs link and docs badge in readme

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Documentation
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-          cache-dependency-path: "website/package-lock.json"
+          cache-dependency-path: website/package-lock.json
 
       - name: Install dependencies
         run: npm ci
