--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,4 +1,4 @@
-name: Test deployment
+name: Docs Test
 
 on:
   pull_request:
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-          cache-dependency-path: "website/package-lock.json"
+          cache-dependency-path: website/package-lock.json
 
       - name: Install dependencies
         run: npm ci
