--- a/.github/workflows/yolol.yml
+++ b/.github/workflows/yolol.yml
@@ -16,11 +16,10 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: "^1.17.3"
+          go-version: '^1.17.3'
       - name: Setup yodk
         run: go install github.com/dbaumgarten/yodk@latest
       - name: Validate
         run: |
+          yodk verify ./**/*.yolol
           yodk verify ./**/**/*.yolol
-          yodk verify ./**/**/**/*.yolol
-          yodk verify ./**/**/**/**/*.yolol
